# OSQP-Solver

./: .gitignore  CMakeLists.txt  constraint_builder.h  main.cpp  pybind_example.cpp  pybind_example.py  qp_solver.h  solver-example.cpp  solver.cpp  solver_example.cpp  test.py  utils.h
examples/: CMakeLists.txt  solver-example.cpp
src/: CMakeLists.txt  gomp-solver-wrapper.cpp  gomp-solver-wrapper.h  gomp-solver.h  horizontal-line.h  osqp-wrapper.h  qp_solver.h  utils.h
src/bindings/: gomp-solver-binding.cpp
src/constraints/: constraint-builder.h  constraint_builder.h  constraints.h
test/: CMakeLists.txt  test-binding.py  test.cpp
test/qp_constraints/: test.cpp  test2.cpp
tests/: CMakeLists.txt  test-binding.py  test.cpp
